# z

./: .env.zim-s.example  .gitignore  ARCHITECTURE.md  Dockerfile.server  Dockerfile.server.dockerignore  HISTORY.md  MANIFEST.in  README.md  alembic.ini  install.sh  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.github/workflows/: z-desktop-brand.yml  z-desktop-package.yml  z-extension-vsix.yml
aider/: analytics.py  args.py  commands.py  copypaste.py  io.py  main.py  models.py  onboarding.py  repo.py  waiting.py  watch.py
aider/coders/: base_coder.py  base_prompts.py  editblock_coder.py
aider/resources/: model-settings.yml
aider/z/: __init__.py  auth.py  banner.py  byok_routing.py  cli.py  coding_context.py  control_plane_budget.py  credentials.py  deps.py  errors.py  escalation.py  explore.py  gateway_client.py  git_history.py  github_prs.py  house_instructions.py  latency.py  llm_json.py  login_screen.py  mascot.py  mcp_client.py  mcp_local.py  mcp_runtime.py  mcp_turn.py  models_catalog.py  ni_contract.py  onboarding.py  output_budget.py  paths.py  phase_kinds.py  plan_interview.py  plan_mode.py  shell_risk.py  task_mode.py  theme.py  tool_loop.py  turn_ux.py  uncertainty.py  uncertainty_ui.py  usage_client.py  (+5 more)
api/: index.py
apps/z-desktop/: INSTALL.md  README.md  product.z.json
benchmarks/p2/: README.md
docs/app/: z-activity-strip-design.md  z-agent-state-trace-plan.md  z-desktop-north-star.md  z-editor-completion-plan.md  z-editor-installable-plan.md  z-editor-phase-9-10-plan.md  z-editor-v1-implementation-plan.md  z-soft-ui-design.md  z-ui-redesign-plan.md
docs/codex/: README.md  z-features-and-usage.md
requirements/: requirements-web.txt  requirements.in
scripts/: generate_p2_benchmark.py  p2_live_hook_example.py
web/: .env.example  README.md  next.config.ts  vercel.json
z_server/: README.md  __init__.py  app.py  config.py  db.py
(+377 files in other folders)
